terraform/argocd/ app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: app.homework.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app
            port:
              number: 80
